--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "loopback-component-storage": "^3.5.0",
     "loopback-component-storage-mongo": "^1.5.1",
     "loopback-connector-mongodb": "^3.5.0",
+    "react-dom": "^16.4.2",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
   },
