--- a/client_src/package.json
+++ b/client_src/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "scroll-into-view": "^1.9.3"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
