--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,17 @@
 {
-  "extends": "loopback"
+  "extends": "loopback",
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "rules": {
+    "no-undef": 2
+  },
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    }
+  }
 }
